<resources>
    <string name="app_name">FrontShareStorage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="loginButton_string">로그인</string>
    <string name="findIdButton_string">아이디 찾기</string>
    <string name="findPwButton_string">비밀번호 찾기</string>
    <string name="googleLoginButtonText_string">Google 계정으로 로그인</string>
    <string name="kakaoLoginButtonText_string">Kakao 계정으로 로그인</string>
    <string name="loginPageInfoText_string">나눔 창고가 처음이신가요?</string>
    <string name="signUpButton_string">회원가입</string>
    <string name="problemButton_string">문제가 발생하셨나요?</string>

    <string name="signupTitleText_string">회원가입</string>
    <string name="signupNameTextview_string">이름</string>
    <string name="signupCheckText_string">중복확인</string>
    <string name="signupEmailTextview_string">이메일</string>
    <string name="signupNicknameTextview_string">닉네임</string>
    <string name="signupPhoneTextview_string">전화번호</string>
    <string name="signupPasswordTextview_string">비밀번호</string>
    <string name="signupDetailText_string">영문 대/소문자, 숫자, 기호(!@#$%^&amp;*-)를 포함하여 8~20글자 사이로 비밀번호를 사용해 주세요.</string>
    <string name="signupSaveText_string">회원가입 완료</string>

    <string name="volunteertitletextview_string">봉사 제목</string>
    <string name="volunteerlocationtextview_string">봉사 장소</string>
    <string name="volunteerDetailTextview_string">봉사 내용</string>
    <string name="volunteerdatetextview_string">봉사 날짜</string>
    <string name="volunteerstarttimetextview_string">봉사 시작 시간</string>
    <string name="volunteerendtimetextview_string">봉사 종료 시간</string>

    <string name="volunteertimetextview_string">봉사 시간</string>

    <string name="bronze_text">브론즈</string>
    <string name="silver_text">실버</string>
    <string name="gold_text">골드</string>
    <string name="emerald_text">에메랄드</string>
    <string name="dia_text">다이아</string>
    <string name="master_text">마스터</string>
    <string name="challenger_text">챌린저</string>

</resources>