<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout android:id="@+id/login_page"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View
                android:id="@+id/login_view"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/white"
                android:layout_width="410dp"
                android:layout_height="910dp" />

            <ImageView android:id="@+id/logoImage"
                android:src="@drawable/logoimage"
                android:contentDescription="logo"
                android:layout_marginStart="62dp"
                android:layout_marginTop="88dp"
                android:layout_width="284dp"
                android:layout_height="108dp" /> />

            <RelativeLayout android:id="@+id/emailView"
                android:layout_marginTop="269dp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/emailLine"
                    android:background="@drawable/rectangle_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="350dp"
                    android:layout_height="1dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/emailEditFrame"
                android:layout_marginTop="238dp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="350dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/white"
                    android:gravity="center" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/passwordFrame"
                android:layout_marginTop="322dp"
                android:layout_marginStart="29dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/passwordLine"
                    android:background="@drawable/rectangle_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="350dp"
                    android:layout_height="1dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/passwordEditFrame"
                android:layout_marginTop="290dp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText   android:id="@+id/passwordEditText"
                    android:background="@color/white"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="350dp"
                    android:layout_height="29dp"
                    android:gravity="center"
                    android:inputType="textPassword"/>

            </RelativeLayout>

            <RelativeLayout android:id="@+id/loginButtonFrame"
                android:layout_marginTop="341dp"
                android:layout_marginStart="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/loginBtn"
                    android:background="@drawable/rectangle_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="350dp"
                    android:layout_height="44dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/loginTextFrame"
                android:layout_marginTop="351dp"
                android:layout_marginStart="175dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/loginText"
                    android:fontFamily="Inter"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="81dp"
                    android:layout_height="38dp"
                    android:text="@string/loginButton_string"
                    />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/findIdTextFrame"
                android:layout_marginTop="405dp"
                android:layout_marginStart="129dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/findIdText"
                    android:fontFamily="Inter"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="88dp"
                    android:layout_height="27dp"
                    android:text="@string/findIdButton_string"
                    />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/findPwTextFrame"
                android:layout_marginTop="405dp"
                android:layout_marginStart="213dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/findPwText"
                    android:fontFamily="Inter"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="101dp"
                    android:layout_height="27dp"
                    android:text="@string/findPwButton_string"
                    />

            </RelativeLayout>


            <ImageView android:id="@+id/googleBarView"
                android:src="@drawable/logingooglebar"
                android:contentDescription="image_1"
                android:layout_marginStart="28dp"
                android:layout_marginTop="467dp"
                android:layout_width="350.82dp"
                android:layout_height="44dp" />

            <RelativeLayout android:id="@+id/googleImageFrame"
                android:layout_marginTop="475dp"
                android:layout_marginStart="68dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/googleImage"
                    android:src="@drawable/logingoogleimage"
                    android:contentDescription="free_icon_google_300221_2"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="26dp"
                    android:layout_height="25dp" />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/googleLoginTextFrame"
                android:layout_marginTop="473dp"
                android:layout_marginStart="111dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/googleLoginText"
                    android:fontFamily="Inter"
                    android:textSize="20sp"
                    android:textColor="@color/loginTextColor"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="233dp"
                    android:layout_height="38dp"
                    android:text="@string/googleLoginButtonText_string"
                    />

            </RelativeLayout>


            <ImageView android:id="@+id/kakaoBarImage"
                android:src="@drawable/loginkakaobar"
                android:contentDescription="image_3"
                android:layout_marginStart="28dp"
                android:layout_marginTop="522dp"
                android:layout_width="350.82dp"
                android:layout_height="44dp" />

            <RelativeLayout android:id="@+id/kakaoImageFrame"
                android:layout_marginTop="532dp"
                android:layout_marginStart="68dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/kakaoImage"
                    android:src="@drawable/loginkakaoimage"
                    android:contentDescription="kakaoicon"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="25.47dp"
                    android:layout_height="26dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/kakaoLoginTextFrame"
                android:layout_marginTop="530dp"
                android:layout_marginStart="111dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/kakaoLoginText"
                    android:fontFamily="Inter"
                    android:textSize="20sp"
                    android:textColor="@color/loginTextColor"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="224dp"
                    android:layout_height="38dp"
                    android:text="@string/kakaoLoginButtonText_string"
                    />

            </RelativeLayout>



            <RelativeLayout android:id="@+id/newToThisTextFrame"
                android:layout_marginTop="588dp"
                android:layout_marginStart="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/newToThisText"
                    android:fontFamily="Inter"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="176dp"
                    android:layout_height="27dp"
                    android:text="@string/loginPageInfoText_string"
                    />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/signUpTextFrame"
                android:layout_marginTop="588dp"
                android:layout_marginStart="262dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/signUpText"
                    android:fontFamily="Inter"
                    android:textSize="14sp"
                    android:textColor="@color/mainColor"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="71dp"
                    android:layout_height="27dp"
                    android:text="@string/signUpButton_string"
                    />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/problemButtonFrame"
                android:layout_marginTop="685dp"
                android:layout_marginStart="142dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/problemButton"
                    android:fontFamily="Inter"
                    android:textSize="14sp"
                    android:textColor="@color/mainColor"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="146dp"
                    android:layout_height="27dp"
                    android:text="@string/problemButton_string"
                    />

            </RelativeLayout>



        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>